--- a/Motor2D/Motor2D.vcxproj.filters
+++ b/Motor2D/Motor2D.vcxproj.filters
@@ -133,4 +133,7 @@
   <ItemGroup>
     <ResourceCompile Include="Motor 2D.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="C:\Users\Oscar Royo\Downloads\UnknownMinerIcon.ico" />
+  </ItemGroup>
 </Project>
