--- a/Motor2D/Motor2D.vcxproj
+++ b/Motor2D/Motor2D.vcxproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="j1AirEnemy.cpp" />
+    <ClCompile Include="j1Coin.cpp" />
     <ClCompile Include="j1Collision.cpp" />
     <ClCompile Include="j1FadeToBlack.cpp" />
     <ClCompile Include="j1Fonts.cpp" />
@@ -103,6 +104,7 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h" />
+    <ClInclude Include="j1Coin.h" />
     <ClInclude Include="j1Fonts.h" />
     <ClInclude Include="j1GroundEnemy.h" />
     <ClInclude Include="j1AirEnemy.h" />
